--- a/FRONT/static/styles.css
+++ b/FRONT/static/styles.css
@@ -89,3 +89,29 @@ body {
   }
 }
 }
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: bottom;
+  background-color: #f3f4f6;
+  margin-top: auto; 
+}
+.homeSelector{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 2rem;
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.1);
+  h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+    color: #333;
+  }
+}
